[gd_scene load_steps=9 format=3 uid="uid://djehfqq6xak8y"]

[ext_resource type="Script" path="res://src/scenes/guilds/Create.gd" id="1_i0oco"]
[ext_resource type="FontFile" uid="uid://jx5vc8i6vlpd" path="res://fonts/DungeonFont.ttf" id="2_0hidy"]
[ext_resource type="Texture2D" uid="uid://bffx465c76wek" path="res://art/UI/rects/clouds.png" id="2_mn3yl"]
[ext_resource type="Texture2D" uid="uid://rh1pxwgcldce" path="res://art/UI/rects/720x100.png" id="4_1t6tl"]
[ext_resource type="Texture2D" uid="uid://b8eiyfk34naym" path="res://art/button.png" id="6_tsr41"]

[sub_resource type="LabelSettings" id="LabelSettings_x65j7"]
font = ExtResource("2_0hidy")
font_size = 72
shadow_size = 10
shadow_color = Color(0.266667, 0, 0.278431, 0.603922)
shadow_offset = Vector2(10, 5)

[sub_resource type="LabelSettings" id="LabelSettings_y2uxx"]
font = ExtResource("2_0hidy")
font_size = 51

[sub_resource type="LabelSettings" id="LabelSettings_yea75"]
font = ExtResource("2_0hidy")
font_size = 66

[node name="Create" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i0oco")

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color(0.501961, 1, 0.776471, 1)
custom_minimum_size = Vector2(600, 100)
layout_mode = 2
offset_left = 60.0
offset_right = 660.0
offset_bottom = 100.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_mn3yl")
expand_mode = 1

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 89.0
offset_right = -92.0
offset_bottom = 100.0
grow_horizontal = 2
text = "Create guild"
label_settings = SubResource("LabelSettings_x65j7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_1t6tl")
expand_mode = 1

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Input" type="VBoxContainer" parent="Control"]
layout_mode = 2
offset_left = 110.0
offset_top = 160.0
offset_right = 610.0
offset_bottom = 670.0
size_flags_horizontal = 4
theme_override_constants/separation = 10
alignment = 1

[node name="Title" type="LineEdit" parent="Control/Input"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0hidy")
theme_override_font_sizes/font_size = 51
placeholder_text = "Title"

[node name="Description" type="TextEdit" parent="Control/Input"]
custom_minimum_size = Vector2(500, 400)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0hidy")
theme_override_font_sizes/font_size = 51
placeholder_text = "Description"

[node name="Back" type="TextureButton" parent="Control"]
modulate = Color(0.65, 0.784167, 1, 0.776471)
custom_minimum_size = Vector2(160, 80)
layout_mode = 2
offset_left = 130.0
offset_top = 745.0
offset_right = 290.0
offset_bottom = 845.0
pivot_offset = Vector2(80, 50)
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("6_tsr41")
stretch_mode = 5

[node name="Label2" type="Label" parent="Control/Back"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Back"
label_settings = SubResource("LabelSettings_y2uxx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Create" type="TextureButton" parent="Control"]
custom_minimum_size = Vector2(250, 150)
layout_mode = 2
offset_left = 340.0
offset_top = 720.0
offset_right = 590.0
offset_bottom = 870.0
pivot_offset = Vector2(125, 75)
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("6_tsr41")
stretch_mode = 5

[node name="Label" type="Label" parent="Control/Create"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Create"
label_settings = SubResource("LabelSettings_yea75")
horizontal_alignment = 1
vertical_alignment = 1

[node name="POST" type="HTTPRequest" parent="."]

[connection signal="mouse_entered" from="Control/Back" to="." method="_on_back_mouse_entered"]
[connection signal="mouse_exited" from="Control/Back" to="." method="_on_back_mouse_exited"]
[connection signal="pressed" from="Control/Back" to="." method="_on_back_pressed"]
[connection signal="mouse_entered" from="Control/Create" to="." method="_on_create_mouse_entered"]
[connection signal="mouse_exited" from="Control/Create" to="." method="_on_create_mouse_exited"]
[connection signal="pressed" from="Control/Create" to="." method="_on_create_pressed"]
[connection signal="request_completed" from="POST" to="." method="_on_post_request_completed"]
